--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,11 @@
 body {
-  background-color: pink;
+  background-color: #edc9af59 !important;
   color: #2c3e50;
 }
 
+*{
+  font-size: 70px;
+}
 .App {
   text-align: center;
 }
@@ -27,10 +30,26 @@ body {
   font-size: large;
 }
 
+.operatorsWrapper {
+  margin-top: 150px;
+}
+
 .operatorButton {
   width: 100%;
   margin-top: 10%;
+  border-radius: 20px;
+}
+
+.plus {
   background-color: #42f4d9;
+}
+
+.minus {
+  background-color: #dcb7ff;
+}
+
+.multiplication {
+  background-color: yellow;
 }
 
 ul {
@@ -39,12 +58,19 @@ ul {
 
 .image {
   height: 200px;
+  margin-top: 11%;
 }
 
 .image img{
   height: 100%;
   width: 100%;
 }
+
+.characterList {
+  font-size: 20px;
+  margin-bottom: -20px;
+}
+
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
@@ -65,11 +91,7 @@ $border-radius: 5px;
   }
   @return unquote($value);
 }
-* {
-  font-family: sans-serif;
-  font-size: 70px;
-  box-sizing: border-box;
-}
+
 
 .btn {
   -webkit-appearance: none;
@@ -91,7 +113,7 @@ $border-radius: 5px;
   text-align: center;
   margin: 50px auto;
   padding: 20px 10px;
-  background-color: ivory;
+  background-color: #dcb7ff;
   box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
   border-radius: $border-radius;
 }
@@ -100,30 +122,27 @@ $border-radius: 5px;
   padding: 20px 0;
   align-items: center;
   justify-content: space-around;
+  font-size: 70px;
   & > span {
     min-width: 78px;
   }
 }
 #equal {
-  padding: 0 15px;
-  height: $equal-size;
-  line-height: $equal-size;
-  min-width: $equal-size;
-  background: #2ecc71;
-  text-shadow: multiple-text-shadow(30, darken($equal-color, 15%));
+  color: black;
+  font-size: 70px;
+  background: #dcb7ff;
 }
 
-    .characterName {
-      position: absolute;
-      top: 60%;
-      left: 60%;
-      transform: translate(-40%, -40%);
-    }
+.characterName {
+  position: absolute;
+  top: 60%;
+  left: 60%;
+  transform: translate(-40%, -40%);
+}
 
-    .characterContainer {
-      position: relative;
-    }
-
+.characterContainer {
+  position: relative;
+}
 
  KEYFRAMES */
 @-webkit-keyframes animateBubble {
@@ -296,41 +315,21 @@ $border-radius: 5px;
   transform: scale(0.3);
 }
 /* OBJECTS */
+
 .bubble {
   background-color: yellow;
+  font-size:70px;
     -webkit-border-radius: 50%;
   -moz-border-radius: 50%;
-  border-radius: 50%;
+  border-color: yellow;
   
-    -webkit-box-shadow: 0 20px 30px rgba(0, 0, 0, 0.2), inset 0px 10px 30px 5px rgba(255, 255, 255, 1);
-  -moz-box-shadow: 0 20px 30px rgba(0, 0, 0, 0.2), inset 0px 10px 30px 5px rgba(255, 255, 255, 1);
-  box-shadow: 0 20px 30px rgba(0, 0, 0, 0.2), inset 0px 10px 30px 5px rgba(255, 255, 255, 1);
+    -webkit-box-shadow: none;
+  -moz-box-shadow: none;
+  box-shadow: none;
   
     height: 200px;
   position: absolute;
   width: 200px;
-}
-.bubble:after {
-    background: -moz-radial-gradient(center, ellipse cover,  rgba(255,255,255,0.5) 0%, rgba(255,255,255,0) 70%); /* FF3.6+ */
-    background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%,rgba(255,255,255,0.5)), color-stop(70%,rgba(255,255,255,0))); /* Chrome,Safari4+ */
-    background: -webkit-radial-gradient(center, ellipse cover,  rgba(255,255,255,0.5) 0%,rgba(255,255,255,0) 70%); /* Chrome10+,Safari5.1+ */
-    background: -o-radial-gradient(center, ellipse cover,  rgba(255,255,255,0.5) 0%,rgba(255,255,255,0) 70%); /* Opera 12+ */
-    background: -ms-radial-gradient(center, ellipse cover,  rgba(255,255,255,0.5) 0%,rgba(255,255,255,0) 70%); /* IE10+ */
-    background: radial-gradient(ellipse at center,  rgba(255,255,255,0.5) 0%,rgba(255,255,255,0) 70%); /* W3C */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#80ffffff', endColorstr='#00ffffff',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
-  -webkit-border-radius: 50%;
-  -moz-border-radius: 50%;
-  border-radius: 50%;
-  
-    -webkit-box-shadow: inset 0 20px 30px rgba(255, 255, 255, 0.3);
-  -moz-box-shadow: inset 0 20px 30px rgba(255, 255, 255, 0.3);
-  box-shadow: inset 0 20px 30px rgba(255, 255, 255, 0.3);
-  
-  content: "";
-    height: 180px;
-  left: 10px;
-  position: absolute;
-  width: 180px;
 }
 
 
