--- a/src/App.css
+++ b/src/App.css
@@ -74,36 +74,14 @@ ul {
   to { transform: rotate(360deg); }
 }
 
-$box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-$box-shadow-hover: 0 15px 30px rgba(0, 0, 0, 0.25),
-  0 10px 10px rgba(0, 0, 0, 0.22);
-$transition: all 0.2s;
-$equal-color: #2ecc71;
-$reset-color: #e74c3c;
-$equal-size: 70px;
-$border-radius: 5px;
-@function multiple-text-shadow ($n, $color) {
-  $value: '2px 2px 0 #{$color}';
-  @for $i from 2 through $n {
-    $value: '#{$value} , #{$i}px #{$i}px  0 ' + lighten($color,  ($i * 0.2));
-  }
-  @return unquote($value);
-}
-
-
-.btn {
+.btn:hover :active :focus {
   -webkit-appearance: none;
   cursor: pointer;
   color: ivory;
   padding: 10px 20px;
-  outline: none;
+  outline: 0;
   border: none;
   overflow: hidden;
-  border-radius: $border-radius;
-  transition: $transition;
-  &:hover {
-    box-shadow: $box-shadow-hover;
-  }
 }
 #wrapper {
   width: 400px;
@@ -311,6 +289,10 @@ $border-radius: 5px;
   -moz-transform: scale(0.3);
   transform: scale(0.3);
 }
+
+.x1:focus, .x2:focus, .x3:focus, .x4:focus, .x5:focus, .x6:focus, .x7:focus, .x8:focus, .x9:focus, .x10:focus {
+    outline-style: none;
+}
 /* OBJECTS */
 
 .bubble {
@@ -341,6 +323,63 @@ $border-radius: 5px;
 .chapter p{
   margin: 10%;
 }
+
+.storyTitle{
+ text-align: center;
+ margin-top: 10%;
+ background: #dcb7ff;
+ padding: 10px;
+ padding-left: 15px;
+ padding-right: 15px;
+ border-radius: 15px;
+}
+
+.storyTitle h1 {
+  font-size: 1em;
+}
+
+.next {
+  border-radius: 15px;
+  background-color: #dcb7ff;
+  border: none;
+  color: #ffffff;
+  text-align: center;
+  font-size: 24px;
+  padding: 10px;
+  width: 150px;
+  transition: all 0.5s;
+  cursor: pointer;
+  margin-bottom: 30px;
+  margin-left: 63%;
+}
+
+.next span {
+  cursor: pointer;
+  display: inline-block;
+  position: relative;
+  transition: 0.5s;
+}
+
+.next span:after {
+  content: '\00bb';
+  position: absolute;
+  opacity: 0;
+  top: 0;
+  right: -20px;
+  transition: 0.5s;
+}
+
+.next:hover , .next:focus, span {
+  padding-right: 25px;
+  outline-style: none;
+}
+
+.next:hover span:after {
+  opacity: 1;
+  right: 0;
+}
+
+
 
 
 
