--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,7 @@ body {
   color: #2c3e50;
 }
 
+
 .App {
   text-align: center;
 }
@@ -379,6 +380,10 @@ ul {
   right: 0;
 }
 
+
+.shake{
+  color: red;
+}
 
 
 
