--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,9 @@ body {
   color: #2c3e50;
 }
 
+header{
+  margin-top: 3%;
+}
 
 .App {
   text-align: center;
@@ -37,6 +40,7 @@ body {
   width: 100%;
   margin-top: 10%;
   border-radius: 20px;
+  outline-style: none;
 }
 
 .plus {
@@ -299,22 +303,22 @@ ul {
 .bubble {
   background-color: yellow;
   font-size:70px;
-    -webkit-border-radius: 50%;
+  -webkit-border-radius: 50%;
   -moz-border-radius: 50%;
   border-color: yellow;
   
-    -webkit-box-shadow: none;
+  -webkit-box-shadow: none;
   -moz-box-shadow: none;
   box-shadow: none;
   
-    height: 200px;
+  height: 200px;
   position: absolute;
   width: 200px;
 }
 
 .chapter {
   margin: auto;
-  margin-top: 30%;
+  
   font-size: 1.4em;
   border: 2px solid #dcb7ff;
   box-shadow: 10px 10px 5px #dcb7ff;
@@ -385,7 +389,188 @@ ul {
   color: red;
 }
 
+#div1 {
+    width: 50px;
+    height: 50px;
+    border: 1px solid #aaaaaa;
+    border-radius: 8px;
+}
 
+#drag1 {
+height: 40px;
+border-radius: 5px;
+margin-left: 5px;
+margin-top: 5px;
+}
+
+.fab{
+  color: #42f4d9;
+}
+
+.hintButton{
+    background-color: yellow;
+}
+
+.popUpMessage, .quotes {
+  position: fixed;
+  text-align: center;
+  width: 100%; 
+  height: 100%; 
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgba(0,0,0,0.4); 
+  top: 50%;
+  left:50%;
+  transform: translate(-50%, 30%);
+}
+
+.finalQuestion{
+  margin-left: 80px;
+}
+
+.popUpContent, .quotesContent{
+  background-color: #dcb7ff;
+  margin: 15% auto; 
+  padding: 50px;
+  border: 1px solid #888;
+  width: 90%; 
+  text-align: center;
+}
+
+.popUpButton {
+  background-color: #dcb7ff;
+  color: black;
+  text-align: center;
+  font-size: 18px;
+  padding: 10px;
+  margin-top: 10px;
+  width: 70%;
+  transition: all 0.5s;
+  cursor: pointer;
+  border-radius: 15px;
+  border: 1px solid black;
+}
+
+.popUpButton:focus {
+  outline-style: none;
+}
+
+.popUpquestion {
+  font-size: 24px;
+}
+
+.quoteBtn1 {
+  margin-top: 3%;
+  margin-bottom: 3%;
+  width: 100%;
+  border-radius: 20px;
+  text-align: center;
+}
+
+.quoteBtn {
+  margin-bottom: 10%;
+  width: 100%;
+  border-radius: 20px;
+  text-align: center;
+}
+
+#buttonIsClicked{
+  border: 3px solid blue;
+}
+
+.selected{
+    border: 2px solid green;
+}
+
+.not-selected{
+    border: 2px solid transparent;
+}
+
+
+.startGameButton {
+  background-color: #67ebf7;
+  color: black;
+  text-align: center;
+  font-size: 30px;
+  padding: 10px;
+  margin-bottom: 20%;
+  transition: all 0.5s;
+  cursor: pointer;
+  border-radius: 70px;
+  width: 300px;
+  height: 100px;
+}
+
+.startPageButton {
+  background-color: #dcb7ff;
+  color: black;
+  text-align: center;
+  font-size: 20px;
+  padding: 10px;
+  margin-bottom: 20%;
+  transition: all 0.5s;
+  cursor: pointer;
+  border-radius: 15px;
+  width: 250px;
+}
+
+.start {
+  background-color: #67ebf7;
+  color: black;
+  text-align: center;
+  font-size: 20px;
+  padding: 15px;
+  margin-bottom: 20%;
+  cursor: pointer;
+  border-radius: 15px;
+  height: 100px;
+}
+
+.profileButton {
+  background-color: #67ebf7;
+  color: black;
+  text-align: center;
+  font-size: 20px;
+  padding: 15px;
+  margin-bottom: 20%;
+  cursor: pointer;
+  border-radius: 15px;
+}
+
+.jumpRope {
+  margin-top: 20%;
+  font-size: 1.4em;
+  border: 2px solid #dcb7ff;
+  box-shadow: 10px 10px 5px #dcb7ff;
+  min-height: 150px;
+  text-align: center;
+  padding: 40px;
+  margin-bottom: 10%;
+}
+
+.inputone {
+  border-radius: 15px;
+  margin-left: 70%;
+  font-size: 1.5em;
+  width: 200px;
+  height: 70px;
+  text-align: center;
+  outline-style: none;
+}
+
+.inputtwo {
+  border-radius: 15px;
+  width: 200px;
+  margin-left: 25%;
+  background: #67ebf7;
+  padding: 15px;
+  font-size: 1.6em;
+  text-align: center;
+  outline-style: none;
+}
+
+.svar {
+  font-size: 1.4em;
+}
 
 
 
