--- a/src/App.css
+++ b/src/App.css
@@ -2,15 +2,29 @@
 /************* TYPOGRAPHI *************/
 /**************************************/
 
+
+
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }
 
 body {
-  background-color: #edc9af59 !important;
   color: #2c3e50;
   font-family: 'Mali', cursive !important;
+}
+
+.container-fluid {
+  padding: 0 !important;
+}
+
+main {
+  height: 700px;
+}
+
+.gameChoiceTitle {
+  margin-top: 5%;
+  font-weight: bold;
 }
 
 ul {
@@ -18,9 +32,6 @@ ul {
   text-align: center; 
 }
 
-.container {
-  min-height: 800px;
-}
 
 .App-header {
   background-color: #222;
@@ -72,6 +83,7 @@ ul {
 /************* Pop Ups ****************/
 /******************************************/
 
+/* The Modal (background) */
 .popUpMessage, .quotes {
   position: fixed;
   text-align: center;
@@ -116,41 +128,41 @@ ul {
 /******************************************/
 .startPageSleep {
   background-image: url("./Images/moonAndButterflies.jpg");
-  min-height: 700px;
   background-repeat: no-repeat;
   background-size: cover;
+  height: 700px;
 }
 
 .startPageAwake {
   transition: background-image 0.7s ease-in-out ;
-  background-image: url("./Images/night.jpg");
-  min-height: 700px;
+  background-image: url("./Images/oceanStart.png");
   background-repeat: no-repeat;
   background-size: cover;
+  height: 700px;
 }
 
 #teacherGameBackground {
-  background-image: url("./Images/teacherGame.jpg");
-  min-height: 800px;
+  background-image: url("./Images/bubbles.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
+  height: 700px;
 }
 
 #diceGameBackground {
-  background-image: url("./Images/dice.jpg");
-  min-height: 800px;
+  background-image: url("./Images/bubbles.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
+  height: 700px;
 }
 
 #jumpRopeGameBackground {
-  background-image: url("./Images/jump.png");
-  min-height: 800;
+  background-image: url("./Images/bubbles.jpg");
+  background-color: #063261;
   background-repeat: no-repeat;
-  background-size: cover;
   background-position: center center;
+  height: 700px;
 }
 
 #bubbleGameBackground {
@@ -158,21 +170,25 @@ ul {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
-  min-height: 800px;
+  height: 700px;
 }
 
 #chapterBackground {
   background-image: url("./Images/moonAndButterflies.jpg");
-  min-height: 800px;
   background-repeat: no-repeat;
   background-size: cover;
+  height: 700px;
 }
 
 #dragAndDropGameBackground {
-  background-image: url("./Images/dragAndDrop1.png");
-  min-height: 800px;
+  background-image: url("./Images/bubbles.jpg");
+  margin-right: -2%;
+  margin-left: -2%;
+  background-color: pink;
   background-repeat: no-repeat;
   background-size: cover;
+  background-position: center center;
+  height: 700px;
 }
 
 /**************************************/
@@ -181,7 +197,7 @@ ul {
 
 .operatorButton {
   width: 100%;
-  margin-top: 5%;
+  margin-top: 3%;
   outline-style: none;
 }
 
@@ -207,22 +223,63 @@ ul {
   overflow: hidden;
 }
 
-.hintButton{
+.hintButton {
     background-color: yellow;
-    height: 50%;
-    margin-bottom: 10%;
-    border-radius: 30px;
+    border-radius: 50%;
+    margin-left: 50px;
+    margin-top: 2%;
+}
+
+.hintBubble {
+  position: relative;
+  background: yellow;
+  border-radius: 0.5rem;
+  height: 100px;
+  z-index: 2;
+  margin-top: 20px;
+  margin-left: 38px;
+}
+
+.hintBubble:after {
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 40%;
+  width: 0;
+  height: 0;
+  border: 40px solid transparent;
+  border-right-color: yellow;
+  border-left: 0;
+  border-bottom: 0;
+  margin-top: -22px;
+  margin-left: -40px;
+}
+
+.hintBubble p {
+  font-size: 2em;
+  text-align: center;
+  margin-top: -5%;
+}
+
+.closeHint {
+  font-size: 2.5em;
+  color: black;
+  margin-left: 95%;
+}
+
+.hintBtnTitle {
+  font-size: 0.9em;
 }
 
 .hintButton img {
-  width: 100%;
+  width:  80%;
   height: 100%;
 }
 
 .next {
   border-radius: 15px;
   background-color: #2333af;
-  border: 3px solid white;
+  border: 2px solid rgb(255, 239, 140);
   color: #ffffff;
   text-align: center;
   font-size: 24px;
@@ -324,7 +381,7 @@ ul {
   text-align: center;
   font-size: 30px;
   padding: 10px;
-  margin-top: 22%;
+  margin-top: 10%;
   transition: all 0.5s;
   cursor: pointer;
   border-radius: 70px;
@@ -358,14 +415,21 @@ ul {
 }
 
 .profileButton {
-  background-color: #67ebf7;
-  color: black;
-  text-align: center;
-  font-size: 20px;
-  padding: 15px;
-  margin-bottom: 20%;
-  cursor: pointer;
   border-radius: 15px;
+  margin-left: 50px;
+  margin-top: 2%;
+  background: rgb(255, 250, 152);
+  height: 100px;
+}
+
+.profileButton img{
+  width: 100%;
+  height: 50%;
+}
+
+.profileBtnTitle {
+  font-size: 0.9em;
+  margin-top: 7px;
 }
 
 .teacherBtn {
@@ -379,21 +443,9 @@ ul {
   width: 100%;
   height: 100%;
   border-radius: 10px;
-  background: #f9b7ffd9;
-}
-
-
-.diceBtn{
-  padding-left: 25px;
-  padding-right: 25px;
-  padding-top: 10px;
-  padding-bottom: 10px;
-  background: #00FFFF;
-  border-radius: 25px;
-  margin-left: 10px;
-  margin-bottom: 10px;
-  outline-style: none;
-  font-size: 2em;
+  background: rgba(252, 74, 216, 1);  
+  color: white;
+  font-weight: bold;
 }
 
 
@@ -404,7 +456,7 @@ ul {
 
 .check {
   position: relative;
-  background: yellow;
+  background: #fef896;
   line-height: 0;
   perspective: 400px;
   height: 5rem;
@@ -513,41 +565,47 @@ ul {
 /**************************************/
 
  #wrapper {
-  margin-top: -16% !important;
-  color: white;
+  color: #fffe01;
   border-radius: 35px;
-  width: 400px;
+  width: 500px;
   text-align: center;
   margin: 50px auto;
-  padding: 20px 10px;
-  background-color: #212529ad;
+  padding: 20px 20px;
+  background-color: rgba(33,37,41,0.68);
   box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
   border-radius: $border-radius;
+  border: 5px solid #ff6e00;
+  font-weight: bold;
 }
 #q {
   display: flex;
   align-items: center;
   justify-content: space-around;
-  font-size: 70px;
+  font-size: 100px;
   & > span {
     min-width: 78px;
   }
 }
 #equal {
-  color: white;
-  font-size: 70px;
-  background: #212529ad;
+  color: #f70cd6;
+  font-size: 100px;
+  background: transparent;
+  font-weight: bold;
 }
 
 .bubbleGamesAnswer{ 
-color: pink;
+  color: #fffe01;
  }
 
+.operatorSign {
+  font-size: 70px;
+  color: #00ff0c;
+}
 
 KEYFRAMES */
 @-webkit-keyframes animateBubble {
     0% {
-        margin-top: 1000px;
+        margin-top: 500px;
     }
     100% {
         margin-top: -100%;
@@ -555,7 +613,7 @@ KEYFRAMES */
 }
 @-moz-keyframes animateBubble {
     0% {
-        margin-top: 1000px;
+        margin-top: 500px;
     }
     100% {
         margin-top: -100%;
@@ -563,7 +621,7 @@ KEYFRAMES */
 }
 @keyframes animateBubble {
     0% {
-        margin-top: 1000px;
+        margin-top: 500px;
     }
     100% {
         margin-top: -100%;
@@ -638,9 +696,9 @@ KEYFRAMES */
   left: 20%;
   top: 0;
   
-  -webkit-transform: scale(0.3);
-  -moz-transform: scale(0.3);
-  transform: scale(0.3);
+  -webkit-transform: scale(0.7);
+  -moz-transform: scale(0.7);
+  transform: scale(0.7);
 }
 .x5 {
     -webkit-animation: animateBubble 29s linear infinite, sideWays 4s ease-in-out infinite alternate;
@@ -674,9 +732,9 @@ KEYFRAMES */
   left: 65%;
   top: 70%;
   
-  -webkit-transform: scale(0.4);
-  -moz-transform: scale(0.4);
-  transform: scale(0.4);
+  -webkit-transform: scale(0.7);
+  -moz-transform: scale(0.7);
+  transform: scale(0.7);
 }
 .x8 {
     -webkit-animation: animateBubble 22s linear infinite, sideWays 3s ease-in-out infinite alternate;
@@ -745,34 +803,12 @@ KEYFRAMES */
   padding-top: 5%;
   padding-bottom: 5%;
   background: linear-gradient(white, #f0027f);
-  height: 700px;
+  height: 600px;
   font-size: 70px;
 }
 
 .characterContainer {
   height: 700px;
-}
-
-section {
-  width: 100%;
-  min-height: 300px;
-}
-
-.wave {
-  position: relative;
-  background: linear-gradient(90deg, #f0027f, #75489f);
-}
-
-.wave:before {
-  content: '';
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  height: 165px;
-  background: url("./Images/gameChoiceHeader.png"); 
-  background-size: cover;
-  background-repeat: no-repeat;
 }
 
 /**************************************/
@@ -822,6 +858,7 @@ section {
 
 .checkbox input[type="checkbox"]:checked + label {
   background-color: #42f4d9;
+  border-radius: 10px;
 }
 
 .teacherMathExpressionOne, .teacherMathExpressionTwo, .teacherMathExpressionThree, .teacherMathExpressionFour, .teacherMathExpressionFive{
@@ -840,7 +877,7 @@ section {
 }
 
 .teacherMathExpressionTwo {
-    background: #FF1493; 
+    background: #bf80ff; 
 }
 
 .teacherMathExpressionThree {
@@ -855,63 +892,52 @@ section {
     background: #FFFF00; 
 }
 
+.teacherGameDiv {
+  margin-left: 15% !important;
+}
+
  
 /**************************************/
 /************* JumpRopeGame *************/
 /**************************************/
 
 .jumpRope {
-  margin-top: 20%;
+  position: relative;
+  color: white;
+  width: 100%;
   font-size: 1.5em;
-  min-height: 150px;
   text-align: center;
   padding: 40px;
-  margin-bottom: 10%;
-  margin-left: 3%;
-}
-
-.jumpRope {
-  position: relative;
-  background: #ec458a;
-  border-radius: 0.4em;
-  color: white;
-  width: 90%;
-}
-
-.jumpRope:after {
-content: '';
-  position: absolute;
-  right: 0;
-  top: 50%;
-  width: 0;
-  height: 0;
-  border: 55px solid transparent;
-  border-left-color: #ec458a;
-  border-right: 0;
-  border-bottom: 0;
-  margin-top: -27.5px;
-  margin-right: -55px;
+  margin-bottom: -10px;
 }
 
 .jumpDiv {
-  margin-top: -40px;
+  margin-top: 5%;
+  background: rgba(33,37,41,0.68);
+  border-radius: 20px;
+  padding-bottom: 20px;
 }
 
 .inputone {
   border-radius: 15px;
   font-size: 1.5em;
-  height: 70px;
+  height: 60px;
   text-align: center;
   outline-style: none;
+  margin-left: 55%;
 }
 
 .jumpRopeAnswerButton {
   border-radius: 15px;
-  background: yellow;
-  padding: 15px;
-  font-size: 1.6em;
+  background: rgba(252, 74, 216, 1);
+  font-size: 1.3em;
   text-align: center;
   outline-style: none;
+  margin-left: 22%;
+  height: 60px;
+
+  color: white;
+  font-weight: bold;
 }
 
 .jumpRopeWrongAnswer {
@@ -921,10 +947,33 @@ content: '';
   transform: translate3d(0, 0, 0);
   backface-visibility: hidden;
   perspective: 1000px;
+  height: 60px;
+  color: white;
+  font-size: 1.5em;
+  border: none;
 }
 
 .jumpRopeRightAnswer {
   background: #42f4d9;
+  height: 60px;
+}
+
+.fullMathExpression {
+    text-align: center;
+    font-size: 2em;
+    background: white;
+    height: 60px;
+    border-radius: 20px;
+    color: black;
+    font-weight: bold; 
+}
+
+.operator {
+  color: rgba(241, 36, 135, 1);
+}
+
+.equalSign {
+  color: blue;
 }
 
 
@@ -933,8 +982,10 @@ content: '';
 /**************************************/
 
 #dice {
-  font-size: 6rem;
+  font-size: 8rem;
   padding: 0;
+  margin-left: 235px; 
+  color: yellow;   
 }
 
 .diceGame {
@@ -944,45 +995,26 @@ content: '';
 
  .dice{
   text-align: center; 
-  background-color: #212529b0;
-  color: white;
-  padding: 50px;
+  background-color: rgba(0,0,0,0.3);
+  color: white !important;
+  padding-top: 5%;
  }
 
 .title {
   padding: 0;
+  text-align: center;
+  margin-top: -16%;
 }
 
 .title h1{
-  margin: 0 auto;
-  margin-bottom: 30px;
-  color: white;
-  padding-top: 20px;
+  margin-left: 8%;
+  color: yellow;
   font-weight: bold;
-}
-
-.title img{
-  height: 250px;
-  width: 100%;
-  border-radius: 10px;
-}
-
-#diceCount{
-  padding-left: 10px;
-  padding-right: 10px;
-  background: #FFFFE0;
-  border-radius: 5px;
-  margin-left: 10px;
-  margin-bottom: 10px;
-  outline-style: none;
-  width: 60px;
-  font-size: 1.5em;
-  
+  z-index: 1;
 }
 
 .inputDice {
-  border-radius: 15px;
-  font-size: 2em;
+  font-size: 1.8em;
   text-align: center; 
 }
 
@@ -999,8 +1031,23 @@ content: '';
 }
 
 .titleTotalDice {
-  font-size: 1.8em;
+  font-size: 1.6em;
 }
+
+.diceBtn{
+  padding-top: 10px;
+  background: #01b1c2;
+  outline-style: none;
+  color: white;
+  margin-top: 65%;
+  height: 100px;
+  width: 100px;
+  font-size: 1em;
+  border-radius: 50%;
+  font-weight: bold;
+  border: 2px solid yellow;
+}
+
 
 /*****************************************/
 /************* DragAndDropGame *************/
@@ -1025,10 +1072,13 @@ margin-top: 5px;
 }
 
 .items {
-  background-color: #17a2b8;
+  background-color: blue;
+  opacity: 0.8;
+  color: white
+  ;
   text-align: center; 
   font-size: 2.5em;
-  margin-left: 100px;
+  margin-left: 40px;
   padding: 60px;
   border-radius: 40px;
 }
@@ -1036,8 +1086,19 @@ margin-top: 5px;
 .dragBtn {
   background-color: #f0027f;
   color: white;
+  width: 100%;
+  padding: 0;
 }
 
+.dragAndDropExpression{
+  word-spacing: 5px;
+}    
+
+.dropBox {
+  padding: 0;
+  margin-left: 10px;
+  width: 100px;
+}
 
 /*****************************************/
 /************* Chapter Section *************/
@@ -1049,7 +1110,7 @@ margin-top: 5px;
 }
 
 .characterList img{
-  height: 100%;
+  height: 80%;
   width: 100%;
   border: 10px solid white;
 }
@@ -1060,7 +1121,6 @@ margin-top: 5px;
   padding-top: 5%;
   text-align: center;
   min-height: 70px;
-  height: 100%;
   height: 100%;
 }
 
@@ -1076,7 +1136,7 @@ margin-top: 5px;
   padding-top: 5%;
   padding-bottom: 5%;
   background: linear-gradient(white, #f0027f);
-  height: 700px;
+  height: 600px;
 
 }
 
@@ -1089,7 +1149,7 @@ margin-top: 5px;
   text-align: center;
   margin: auto;
   border-radius: 15px;
-  margin-bottom: 15%;
+  margin-top: 5%;
 }
 
 .chapter p{
@@ -1100,15 +1160,114 @@ margin-top: 5px;
 .storyTitle{
  text-align: center;
  margin-top: 10%;
- background: #212529;
- color: white;
- opacity: 0.8;
+ color: white !important;
  padding: 10px;
  padding-left: 15px;
  padding-right: 15px;
  border-radius: 15px;
+ font-weight: bold;
 }
 
 .storyTitle h1 {
   font-size: 1em;
 }
+
+
+.FinishButtonCheck {
+  position: relative;
+  background: #fef896;
+  line-height: 0;
+  perspective: 400px;
+  height: 5rem;
+  margin-top: 30px;
+}
+
+.FinishButtonCheck input[type="checkbox"],
+.FinishButtonCheck label,
+.FinishButtonCheck label::before,
+.FinishButtonCheck label::after,
+.FinishButtonCheck {
+  appearance: none;
+  display: inline-block;
+  border-radius: 2.2rem;
+  border: 0;
+  transition: .40s ease-in-out;
+  box-sizing: border-box;
+  cursor: pointer;
+}
+
+.FinishButtonCheck label {
+  width: 15rem;
+  height: 5rem;
+  background: linear-gradient(90deg, #421eb1, #f099b5);
+  overflow: hidden;
+  margin: 0;
+}
+
+.FinishButtonCheck input[type="checkbox"] {
+  position: absolute;
+  z-index: 1;
+  width: 4.2rem;
+  height: 4.2rem;
+  top: .4rem;
+  left: .1rem;
+  background: linear-gradient(45deg, #dedede, #ffffff);
+  box-shadow: 0 6px 7px rgba(0,0,0,0.3);
+  outline: none;
+}
+
+.FinishButtonCheck input[type="checkbox"]:checked {
+  left: 12rem;
+}
+
+.FinishButtonCheck input[type="checkbox"]:checked + label {
+  background: transparent;
+}
+
+.FinishButtonCheck label::before,
+.FinishButtonCheck label::after {
+  content: "· ·";
+  position: absolute;
+  overflow: hidden;
+  left: 0.005rem;
+  top: 2.5rem;
+  height: 1rem;
+  letter-spacing: -.55rem;
+  color: #9b9b9b;
+  font-family: "Times New Roman", serif;
+  z-index: 2;
+  font-size: 5rem;
+  border-radius: 0;
+  transform-origin: 0 0 -.5rem;
+  backface-visibility: hidden;
+}
+
+.FinishButtonCheck label::after {
+  content: "●";
+  top: 3.3rem;
+  left: 1.3rem;
+  height: 1.1rem;
+  width: 1.95rem;
+  font-size: 1.2rem;
+  transform-origin: 0 0 -.4rem;
+}
+
+.FinishButtonCheck input[type="checkbox"]:checked + label::before,
+.FinishButtonCheck input[type="checkbox"]:checked + label::after {
+  left: 12.55rem;
+  top: 1.4rem;
+  line-height: 1.1rem;
+  transform: rotateY(360deg);
+}
+
+.FinishButtonCheck input[type="checkbox"]:checked + label::after {
+  height: 1.16rem;
+  top: 2.60rem;
+  left: 13.3rem;
+  font-size: 3.65rem;
+  line-height: 0;
+}
+
+
+
+
