--- a/src/App.css
+++ b/src/App.css
@@ -1122,7 +1122,6 @@ KEYFRAMES */
   font-size: 8rem;
   padding: 0;
   color: white;  
-  padding-top: 61%; 
   margin-bottom: -15%;
 }
 
@@ -1224,6 +1223,23 @@ KEYFRAMES */
 
 .diceButtons {
   background: rgba(0,0,0,0.6);
+}
+
+.diceButtons h3 {
+  color: white;
+  font-weight: bold;
+  font-size: 2.4em;
+  margin-bottom: 3%;
+  margin-top: 32%;
+  z-index: 2;
+  height: 50px;
+}
+
+.diceShake {
+  animation: shake 0.82s cubic-bezier(.36,.07,.19,.97) both !important;
+}
+.correct {
+  background: #fc4ad8;
 }
 
 /*****************************************/
